WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199533
ArgumentsEliminationPhase::eliminateCandidatesThatInterfere() should not decrement nodeIndex pass zero.
https://bugs.webkit.org/show_bug.cgi?id=199533
Summary
ArgumentsEliminationPhase::eliminateCandidatesThatInterfere() should not decr...
Mark Lam
Reported
2019-07-05 15:00:20 PDT
This is a regression introduced in
r246075
.
Attachments
proposed patch.
(4.40 KB, patch)
2019-07-05 15:16 PDT
,
Mark Lam
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2019-07-05 15:00:52 PDT
<
rdar://problem/52669111
>
Mark Lam
Comment 2
2019-07-05 15:16:24 PDT
Created
attachment 373545
[details]
proposed patch.
Mark Lam
Comment 3
2019-07-05 16:06:27 PDT
Thanks for the review. Landed in
r247183
: <
http://trac.webkit.org/r247183
>.
Saam Barati
Comment 4
2019-07-05 17:28:42 PDT
Comment on
attachment 373545
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=373545&action=review
> Source/JavaScriptCore/dfg/DFGArgumentsEliminationPhase.cpp:610 > + // yet to be processed. Inside the look, it refers to the index
Look => loop
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug