ArgumentsEliminationPhase::eliminateCandidatesThatInterfere() should not decrement nodeIndex pass zero. https://bugs.webkit.org/show_bug.cgi?id=199533 <rdar://problem/52669111>

Reviewed by Filip Pizlo.

JSTests:

* stress/ArgumentsEliminationPhase-eliminateCandidatesThatEscape-should-not-decrement-nodeIndex-pass-zero.js: Added.

Source/JavaScriptCore:

* dfg/DFGArgumentsEliminationPhase.cpp:



Canonical link: https://commits.webkit.org/213442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247183 268f45cc-cd09-0410-ab3c-d52691b4dbfc